--- a/clase 7-8 y 9/css/style.css
+++ b/clase 7-8 y 9/css/style.css
@@ -4,6 +4,7 @@ body{
 }
 header{
     background-color: #2e64a1;
+    padding-top: 16px 0;
 }
 header h1{
     color: white;
@@ -12,11 +13,13 @@ header h1{
     font-weight: 300;
     display: inline-block;
     position: relative;
-    bottom: 32px;
+    bottom: 35px;
+    margin: 0;
 
 }
 nav{
     background-color: #6da9ed;
+    margin-bottom: 20px;
 
 }
 nav ul{
@@ -28,4 +31,67 @@ nav ul{
 }
 nav ul li{
     flex-grow: 1;
+
+}
+nav ul li a{
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+    display: block;
+    text-align: center;
+}
+nav ul li a:hover{
+    background-color: rgba(0,0,0,0.3);
+
+}
+nav ul li a.active{
+    background-color: rgba(0,0,0,0.3);
+}
+footer{
+    background-color: #ccc;
+    text-align: center;
+    padding: 40px 0;
+    margin-top: 20px;
+}
+.holder{
+    max-width: 960px;
+    margin: 0 auto;
+}
+h2{
+    color: #2e64a1;
+    font-weight: 400;
+}
+.bienvenidos{
+    width: 75%;
+    padding-right: 16px;
+}
+.testimonios{
+    width: 25%;
+}
+.columnas{
+    display: flex;
+}
+.testimonio{
+    background-color: #ccc;
+    padding: 20px;
+}
+.testimonio .cita{
+    font-size: 24px;
+    font-style: italic;
+    font-weight: bold;
+    display: block;
+}
+.testimonio .autor{
+    font-size: 14px;
+    display: block;
+    text-align: center;
+    margin-top: 16px;
+}
+.historia p{
+    font-size: 13px;
+}
+.persona{
+    border: 3px solid #ddd;
+    border-radius: 5px;
+    width: 18%;
 }
