--- a/clase 7-8 y 9/css/style.css
+++ b/clase 7-8 y 9/css/style.css
@@ -90,8 +90,94 @@ h2{
 .historia p{
     font-size: 13px;
 }
+.personas{
+    display: flex;
+    justify-content: space-between;
+}
 .persona{
     border: 3px solid #ddd;
     border-radius: 5px;
     width: 18%;
+    text-align: center;
+    padding: 8px;
+    box-sizing: border-box;
+    
+}
+.persona img{
+    border-radius: 50%;
+    max-width: 65%;
+    box-shadow: 0 0 5px black;
+    margin: 13px 0 16px;
+
+}
+.persona h5,
+.persona h6{
+    color: #2e64a1;
+    font-weight: normal;
+    margin: 0;
+}
+.persona h5{
+    font-size: 16px;
+    margin-bottom: 3px;
+}
+.persona h6{
+    font-style: italic;
+}
+.persona p{
+    font-size: 14px;
+    line-height: 16px;
+}
+.servicio{
+    border: 2px solid grey;
+    border-radius: 10px;
+    margin: 16px 0;
+    padding: 16px;
+    display: flex;
+    gap: 30px;
+    align-items: center;
+}
+.info h4{
+    color: #2e64a1;
+    font-size: 20px;
+    font-weight: 500;
+    border-bottom: 1px solid #2e64a1;
+    padding-bottom: 6px;
+}
+.servicio img{
+    border-radius: 15px;
+    display: block;
+}
+.servicio:nth-child(even){
+    flex-direction: row-reverse;
+}
+.contacto{
+    display: flex;
+    gap: 25px;
+
+}
+.contacto section{
+    width: 100%;
+}
+.datos{
+    font-size: 14px;
+}
+.datos ul li{
+    font-size: 13px;
+}
+.datos ul li a{
+    text-decoration: none;
+}
+.datos ul li a:hover{
+    background-color:#6da9ed;
+}
+.formulario p{
+    display: flex;
+}
+.formulario p label{
+    min-width: 100px;
+    background-color: yellow;
+}
+.formulario p input,
+.formulario p textarea{
+    width: 100%;
 }
